--- a/test.css
+++ b/test.css
@@ -1,6 +1,6 @@
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 #manipulate {
   position: absolute;
@@ -12,6 +12,9 @@
 
 body {
   font-family: "Work Sans", sans-serif;
+  width: 100%;
+  min-width: 1400px;
+  height: auto;
 }
 
 .split {
